--- a/fluxcd/clusters/local/age-key-secret.yaml
+++ b/fluxcd/clusters/local/age-key-secret.yaml
@@ -1,7 +1,28 @@
 apiVersion: v1
 stringData:
-    age.agekey: null
+    age.agekey: ENC[AES256_GCM,data:bpWb4ADW5gzyHdtOrb0rdFthJCBYJTU33Th3Jq/+ycQcfmcaZ9e3yIdEelPSoo2ZP9wlesw5fo2QAxVcQaVttIjVbCVslDKhuDU=,iv:ThnmHh5Ytm0AEEG4eSo5tQbftIZiCOzs6Xxz/Jk8IUo=,tag:hUdDTgDZh1UovLFj4zwRpA==,type:str]
 kind: Secret
 metadata:
     name: age-key-secret
     namespace: flux-system
+sops:
+    azure_kv:
+        - vault_url: https://k8s-training.vault.azure.net
+          name: Dev-Sops
+          version: 3806b6b5836f46dc96a57523c1a583e0
+          created_at: "2025-10-30T10:24:27Z"
+          enc: eImTbU2LPfWvtHTkTkf2DSPBjt38SuECYBEUxfKavqmvbhltcLE8X1WdgCil2UnoK-OUxsMpFq4SLJRQV7EmDADb3Dfyeysb_0wuwQ9CQmpOogBsF3pTfa3-HLey_ic12qwQEblhrSAwAzajyKPQk8JjuxE0Avl-baJFswnzG79zjNtGByZllXO_mMxJayDVdWRFQVH2ak7YZgfZ5uxMlCGi8NNuFQITWc4CvnbyAfUR74bHBM8oE0XqbEdRk8mAX0gSPOXwbQrdhUC68Jk9o-vZOiwMH0zaTqqTCufmqHetuSU20dZT5vyq1shTbsnp37sUIDTGKBHlhfd1YvpuLw
+    age:
+        - recipient: age1ma0krf3yzghs2zmxl8rj0fdt0gpfq8vvgk88f0807gv9dgpm7pfsdc8q3t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzNk1hYVErVE0xWHNBNGlz
+            NU9SWGN2NFZQSFRYWFJiMDhxdDdEWkxyOG04ClFoalptZW9LLys0dlJMQitFdFhJ
+            TDZJcWo1b21FZmU1ajJyYmE1ejE0UlkKLS0tIFBoQWIrMlFxTmlFVm9SSzk1Tk9E
+            T2ZEa0t3czNIcW5mQklXcUI0cFNoZmMKWlhqkBwG1ScJXIAIOA9DI/mwbNh2sN54
+            EhSEuyE+yZb0Rn7sFB6GLYvWStPKTiGzRkRq+O0S8UB7uzH7kuRq8w==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-10-30T10:24:29Z"
+    mac: ENC[AES256_GCM,data:P3Iuk3zup9UeV5te4VUhl/dzATWK63YOLXWuPcpBWrcMnz40HqpVrmJUcHSCyG13hMx/N3S6Ka7Bx3Br7J1cCJ/nz75arMP4RndrGGMa+Ou2oAlqikW92lNXtQ8EpyDAAeUsw4B56L6TrM0IJp0C3QHWJwdhjmq28E1iJhLkCn0=,iv:RaU/Pvii9Ro1uvdVP3f5Kr68ENM+CMaueabgM7XPK8w=,tag:G1AqsPNqx3ka4aKcw3YdwQ==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    version: 3.11.0
