--- a/fluxcd/clusters/local/flux-sync.yaml
+++ b/fluxcd/clusters/local/flux-sync.yaml
@@ -10,7 +10,7 @@ spec:
     branch: main
   secretRef:
     name: git-pull-secret
-  url: ssh://git@github.com:lkeller-fp/flux-cd.git
+  url: ssh://git@github.com/lkeller-fp/flux-cd.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
