--- a/fluxcd/clusters/local/teams.yaml
+++ b/fluxcd/clusters/local/teams.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: flux-infrastructure
+  name: teams
   namespace: flux-system
 spec:
   decryption:
